--- a/.github/workflows/jar.yml
+++ b/.github/workflows/jar.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI build Jar Artifact
 
 on:
@@ -20,7 +17,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Maven
+    - name: Build
       run: |
         mkdir staging
         mkdir classes
